# Searching-game

./: .gitignore  CLAUDE.md  CMakeLists.txt
.claude/: settings.local.json
assets/: README.md
data/saves/save_1/: clear_rooms.txt  gen_stats.txt
data/saves/save_1/char_1/: stats.txt
data/temp_data/: gen_stats.txt  player_units.txt  rooms.txt
data/temp_data/char_1/: stats.txt
docs/: current-status.md  development-roadmap.md  game-vision.md  implementation-guide.md  pseudocode.md  rpdesign.md  todo.md
for-claude/: Memory_Note_2025-08-27.md
src/: BattleScene.cpp  BattleSystem.cpp  BattleSystem.h  Game.cpp  MainMenuScene.cpp  NewBattleSystem.cpp.backup  Popup.cpp  README.md  Scene.cpp  Utils.cpp  main.cpp
